--- a/test/javascript-prism.html
+++ b/test/javascript-prism.html
@@ -5,10 +5,13 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-  <link rel="stylesheet" href="./theme.css"   type="text/css">
   <link rel="stylesheet" href="./support.css" type="text/css">
 
-  <script src="../dist/daub.js"></script>
+  <script src="../vendor/prism.js"></script>
+  <script src="../vendor/prism-markup.js"></script>
+  <script src="../vendor/prism-javascript-custom.js"></script>
+  <script src="../vendor/prism-jsx.js"></script>
+  <link rel="stylesheet" href="../vendor/prism.css">
   <script src="./support.js"></script>
 
   <title>Daub tests</title>
@@ -22,7 +25,7 @@
 
 <h1 id="iterators">Iterators</h1>
 
-<pre><code class="javascript">
+<pre><code class="language-jsx">
 let fibonacci = {
   [Symbol.iterator]() {
     let pre = 0, cur = 1;
@@ -46,7 +49,7 @@ for (let n of fibonacci) {
 
 <h1 id="symbols">Symbols</h1>
 
-<pre><code class="javascript">
+<pre><code class="language-jsx">
 
 const foo = Symbol.for("app.foo");
 const bar = Symbol.for("app.bar");
@@ -55,7 +58,7 @@ const bar = Symbol.for("app.bar");
 
 <h1 id="variables">Variable assignment</h1>
 
-<pre><code class="javascript">
+<pre><code class="language-jsx">
 let foo = 'bar', baz = { thud: 'troz' },
   somethingElse = [1, 2, { ['this' + 'thing']: 'is weird' }];
 
@@ -63,7 +66,7 @@ let foo = 'bar', baz = { thud: 'troz' },
 
 <h1 id="classes">Classes</h1>
 
-<pre><code class="javascript">
+<pre><code class="language-jsx">
 
 class Shape {
   // ...
@@ -112,7 +115,7 @@ class View extends React.Component {
 
 <h1 id="numerals">Numerals</h1>
 
-<pre><code class="javascript">
+<pre><code class="language-jsx">
 
 0b111110111 === 503;
 0o767 === 503;
@@ -121,7 +124,7 @@ class View extends React.Component {
 
 <h1 id="promises">Promises</h1>
 
-<pre><code class="javascript">function timeout(duration = 0) {
+<pre><code class="language-jsx">function timeout(duration = 0) {
     return new Promise((resolve, reject) => {
         setTimeout(resolve, duration);
     });
@@ -137,7 +140,7 @@ var p = timeout(1000).then(something => {
 
 <h1 id="async-await">async/await</h1>
 
-<pre><code class="javascript">
+<pre><code class="language-jsx">
 let bar = await zort();
 
 async function zort () {
@@ -150,7 +153,7 @@ async function zort () {
 
 <h1 id="templates">Template literals</h1>
 
-<pre><code class="javascript">
+<pre><code class="language-jsx">
 
 let foo = `bar ${something + 1} baz thud`;
 
@@ -180,7 +183,7 @@ a total of ${something((foo, bar) => foo * bar)} bucks?`;</code></pre>
 
 <h1 id="default-parameters">Default parameters</h1>
 
-<pre><code class="javascript">
+<pre><code class="language-jsx">
 class CustomHighlighter extends Highlighter {
   foo (bar, baz) {
     let wat = (huh, wat=1) => huh + 1;
@@ -192,14 +195,31 @@ class CustomHighlighter extends Highlighter {
 
 <h1 id="destructuring">Destructuring</h1>
 
-<pre><code class="javascript">
+<pre><code class="language-jsx">
 let { blah, zort: troz, [five, six] } = getProps();
 
+let {
+  foo,
+  bar: baz,
+  thud = 'troz',
+  zort: { thing = false }
+} = this.props;
+
+</code></pre>
+
+<h1 id="fat-arrow">Objects</h1>
+<pre><code class="language-jsx">
+let HANDLERS = {
+  foo: function () { return ''; },
+  bar: false,
+  troz: 3,
+  ['zort' + 'narf']: (s, i) => s + i
+};
 </code></pre>
 
 <h1 id="fat-arrow">Fat-arrow functions</h1>
 
-<pre><code class="javascript">
+<pre><code class="language-jsx">
 let wat = (huh, wat=1) => huh + 1;
 
 getThing()
@@ -210,7 +230,7 @@ getThing()
 
 <h1 id="misc">Miscellaneous</h1>
 
-<pre><code class="javascript">
+<pre><code class="language-jsx">
 let emptyString = "";
 let anotherEmptyString = '';
 
