--- a/test/shell.html
+++ b/test/shell.html
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="./theme.css"   type="text/css">
   <link rel="stylesheet" href="./support.css" type="text/css">
 
-  <script src="../dist/daub.js"></script>
-  <script src="./support.js"></script>
+  <script src="../lib/daub.js"></script>
+  <script src="../lib/grammars/shell.js"></script>
+  <script src="../lib/plugins/whitespace-normalizer.js"></script>
+  <script data-daub-lang="shell" src="./support.umd.js"></script>
 
   <title>Daub tests</title>
 
@@ -26,32 +28,32 @@
   
   <article>
     <pre><code class="shell">
-    #!/bin/bash
+#!/bin/bash
 
-    cd $ROOT_DIR
-    DOT_FILES="lastpass weechat ssh Xauthority"
-    for dotfile in $DOT_FILES; do conform_link "$DATA_DIR/$dotfile" ".$dotfile"; done
+cd $ROOT_DIR
+DOT_FILES="lastpass weechat ssh Xauthority"
+for dotfile in $DOT_FILES; do conform_link "$DATA_DIR/$dotfile" ".$dotfile"; done
 
-    # TODO: refactor with suffix variables (or common cron values)
+# TODO: refactor with suffix variables (or common cron values)
 
-    case "$PLATFORM" in
-        linux)
-            #conform_link "$CONF_DIR/shell/zshenv" ".zshenv"
-            crontab -l > $ROOT_DIR/tmp/crontab-conflict-arch
-            cd $ROOT_DIR/$CONF_DIR/cron
-            if [[ "$(diff ~/tmp/crontab-conflict-arch crontab-current-arch)" == ""
-                ]];
-                then # no difference with current backup
-                    logger "$LOG_PREFIX: crontab live settings match stored "\
-                        "settings; no restore required"
-                    rm ~/tmp/crontab-conflict-arch
-                else # current crontab settings in file do not match live settings
-                    crontab $ROOT_DIR/$CONF_DIR/cron/crontab-current-arch
-                    logger "$LOG_PREFIX: crontab stored settings conflict with "\
-                        "live settings; stored settings restored. "\
-                        "Previous settings recorded in ~/tmp/crontab-conflict-arch."
-            fi
-        ;;
+case "$PLATFORM" in
+    linux)
+        #conform_link "$CONF_DIR/shell/zshenv" ".zshenv"
+        crontab -l > $ROOT_DIR/tmp/crontab-conflict-arch
+        cd $ROOT_DIR/$CONF_DIR/cron
+        if [[ "$(diff ~/tmp/crontab-conflict-arch crontab-current-arch)" == ""
+            ]];
+            then # no difference with current backup
+                logger "$LOG_PREFIX: crontab live settings match stored "\
+                    "settings; no restore required"
+                rm ~/tmp/crontab-conflict-arch
+            else # current crontab settings in file do not match live settings
+                crontab $ROOT_DIR/$CONF_DIR/cron/crontab-current-arch
+                logger "$LOG_PREFIX: crontab stored settings conflict with "\
+                    "live settings; stored settings restored. "\
+                    "Previous settings recorded in ~/tmp/crontab-conflict-arch."
+        fi
+    ;;
     </code></pre>
     
   </article>
