dear god this is a lot of experimentation

--- a/test/ruby.html
+++ b/test/ruby.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="theme.css" type="text/css" media="screen" />
 
-  <script defer src="../dist/daub.js"></script>
+  <script defer src="../dist/daub.umd.js"></script>
   <script defer src="./support.js"></script>
 
   <link rel="stylesheet" href="./theme.css"   type="text/css">
