--- a/test/arduino.html
+++ b/test/arduino.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./theme.css"   type="text/css">
   <link rel="stylesheet" href="./support.css" type="text/css">
 
-  <script src="../dist/daub.js"></script>
+  <script src="../dist/daub.umd.js"></script>
   <script src="./support.js"></script>
 
   <title>Daub tests</title>
@@ -452,7 +452,7 @@ void loop() {
   delay(50);
 }</code></pre>
 
-<pre><code class="arduino">#include <ESP8266WebServer.h>
+<pre><code class="arduino">#include &lt;ESP8266WebServer.h&gt;
 
 ESP8266WebServer server(80);
 
