--- a/test/html.html
+++ b/test/html.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./theme.css"   type="text/css">
   <link rel="stylesheet" href="./support.css" type="text/css">
 
-  <script src="../dist/daub.js"></script>
+  <script src="../dist/daub.umd.js"></script>
   <script src="./support.js"></script>
 
   <title>Daub tests</title>
@@ -32,9 +32,6 @@
 
 <script type="text/javascript">
   Support.setup();
-  if (window.output) {
-    document.getElementById('code-output').innerHTML = window.output;
-  }
 </script>
 
 </body>
