--- a/test/jsx.html
+++ b/test/jsx.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./theme.css"   type="text/css">
   <link rel="stylesheet" href="./support.css" type="text/css">
 
-  <script src="../dist/daub.js"></script>
+  <script src="../dist/daub.umd.js"></script>
   <script src="./support.js"></script>
 
   <title>Daub tests</title>
@@ -39,7 +39,7 @@ class View extends React.Component {
     return (
       &lt;div className="WhatTheHell"&gt;
         {isClosable && &lt;Button onClose={onClose} /&gt;}
-        &lt;div&gt;foo&lt;/div&gt;
+        &lt;div className={`huh {}} huh`}&gt;foo&lt;/div&gt;
       &lt;/div&gt;
     );
   }
@@ -392,6 +392,10 @@ let {
   zort = false,
   troz: { zort: other }
 } = this.props;
+
+function (param, { sub, params } = {}) {
+  // Stuff
+}
 </code></pre>
 
 <h1 id="fat-arrow">Fat-arrow functions</h1>
@@ -402,6 +406,14 @@ let wat = (huh, wat=1) => huh + 1;
 getThing()
   .then( e => e.json() )
   .catch( e => console.log(e) );
+
+useCallback((event, options={}) => {
+  return event.stopPropagation();
+});
+
+useCallback((foo, ...args) => {
+  return foo.push(...args);
+});
 
 </code></pre>
 
@@ -475,6 +487,11 @@ var Try = {
 
 &lt;/ul&gt;</code></pre>
 
+<h1 id="escapes">Escapes</h1>
+
+<pre><code class="javascript-jsx">
+  let foo = "this is \" an escaped string.";
+</code></pre>
 
 
 <script type="text/javascript">
