Standardize on `variable-parameter` over `parameter` in built-in grammars. Add highlighting of entities in HTML grammar.

--- a/test/html.html
+++ b/test/html.html
@@ -28,7 +28,16 @@
 &lt;/div&gt;
 </code></pre>
 
-<pre><code id="code-output"></code></pre>
+<h1 id="entities">HTML Entities</h1>
+
+<pre><code class="html">
+<ul>
+  <li>Named &amp;rarr; entities &amp;raquo;</li>
+  <li>
+    Numeric &amp;#041; entities &amp;#x09f;
+  </li>
+</ul>
+</code></pre>
 
 <script type="text/javascript">
   Support.setup();
