--- a/test/jsx.html
+++ b/test/jsx.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="daub-language" value="javascript-jsx">
+  <meta name="daub-language" value="javascript-jsx, html">
 
   <link rel="stylesheet" href="./theme.css"   type="text/css">
   <link rel="stylesheet" href="./support.css" type="text/css">
@@ -38,7 +38,7 @@ class View extends React.Component {
     if (foo && bar) { doSomething(); }
     if (bar !== '3') { doSomethingElse(); }
     return (
-      &lt;div className="WhatTheHell"&gt;
+      &lt;div className="WhatTheHell" val={4 + 'wat'}&gt;
         {isClosable && &lt;Button onClose={onClose} /&gt;}
         &lt;div className={`huh {}} huh`}&gt;foo&lt;/div&gt;
       &lt;/div&gt;
