--- a/test/ruby.html
+++ b/test/ruby.html
@@ -45,6 +45,16 @@ foo.map { |id| "/spots/#{id}" }
 # this should not be highlighted like a string.
 </code></pre>
 
+<h1 id="percent-q-paren">%Q and paren-balancing</h1>
+
+<pre><code class="ruby">UH_OH = %Q(
+  this { \{ #{thing + 1} will be a \} problem. }
+)
+
+# this should not be highlighted like a string.
+</code></pre>
+
+
 <h1 id="elaborate-parameters">Elaborate default parameters</h1>
 
 <pre><code class="ruby">def to_public_json(format=:full, options={:foo => "bar", :baz => :thud, :zort => 5_000, :troz => { :wat => 'this is ridiculous' } }, nil_by_default=nil, false_by_default=false)
@@ -104,6 +114,206 @@ end
 <pre><code class="ruby">
 foo = CGI::escape('foo')
 $result = `do --something | with #{foo}`
+</code></pre>
+
+<h1 id="problem-script">Problem Script</h1>
+
+<pre><code class="ruby">
+  #!/usr/bin/env ruby
+
+  require 'nokogiri'
+  require 'optparse'
+  require 'pathname'
+
+  SYSTEMS = ARGV
+
+  NAME_MAP = {
+    'arcade' => 'Arcade Games',
+    'daphne' => 'Laserdisc Games'
+  }
+
+  GAMELIST_ROOT = Pathname.new('/home/pi/.emulationstation/gamelists/')
+
+  output = []
+
+  $options = {
+    require: ['name', 'genre', 'developer']
+  }
+
+  opts = OptionParser.new do |o|
+    o.banner = "Usage: make-game-list [options] [systems]"
+    o.separator ""
+
+    o.on('-r', '--require=FOO,BAR', "Skip games that lack any of these fields (default: name, genre, developer)") do |value|
+      $options[:require] = value.split(',')
+    end
+  end
+
+  begin
+    opts.parse!
+  rescue OptionParser::InvalidArgument => e
+    STDERR.puts("#{e.message}\n\n")
+    STDERR.puts(opts)
+    exit 1
+  end
+
+  def fails_requirements?(meta)
+    $options[:require].any? { |k| meta[k.to_sym].nil? }
+  end
+
+  def html_for_game(game)
+    id = File.basename( game.at_css('path').content, '.zip' )
+    name = game.at_css('name').content
+    date = game.at_css('releasedate').content rescue nil
+    year = date.nil? ? nil : date[0..3]
+    genre = game.at_css('genre').content rescue nil
+    developer = game.at_css('developer').content rescue nil
+    description = game.at_css('desc').content rescue nil
+
+    return '' if fails_requirements?({
+      name:      name,
+      year:      year,
+      genre:     genre,
+      developer: developer
+    })
+
+  %Q[
+    &lt;tr>
+      &lt;td data-game="#{id}" data-value="#{name}">
+        &lt;a href="#" class="game-link" data-toggle="popover" data-title="#{name}">#{name}
+        &lt;div class="game-description">#{description}&lt;/div>
+      &lt;/td>
+      &lt;td>#{year || '?'}&lt;/td>
+      &lt;td>#{genre || '?'}&lt;/td>
+      &lt;td>#{developer || '?'}&lt;/td>
+    &lt;/tr>
+  ]
+
+  end
+
+  def html_for_system(path)
+    xml = Nokogiri::XML( path.open )
+    system = path.dirname.basename.to_s
+
+    games = xml.css('gameList > game')
+
+    rows = games.map { |game| html_for_game(game) }
+
+  %Q(
+  &lt;h2 class="system-title">#{NAME_MAP[system] || system}&lt;/h2>
+  &lt;table class="table table-bordered table-collapsed table-striped sortable">
+    &lt;thead>
+      &lt;tr>
+        &lt;th>Game&lt;/th>
+        &lt;th>Year&lt;/th>
+        &lt;th>Genre&lt;/th>
+        &lt;th>Manufacturer&lt;/th>
+      &lt;/tr>
+    &lt;/thead>
+    &lt;tbody>
+      #{rows}
+    &lt;/tbody>
+  &lt;/table>
+  )
+  end
+
+  SYSTEMS.each do |system|
+    path = GAMELIST_ROOT.join(system, 'gamelist.xml')
+    output << html_for_system(path)
+  end
+
+  output = output.join("\n")
+
+  content = &lt;&lt;-HTML
+  &lt;!DOCTYPE html>
+  &lt;html>
+    &lt;head>
+      &lt;meta charset="utf-8">
+      &lt;title>Nostalgia-Tron Games List&lt;/title>
+
+      &lt;link rel="stylesheet" href="https://fonts.googleapis.com/css?family=News+Cycle:700|Oxygen">
+      &lt;link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+      &lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js">&lt;/script>
+      &lt;script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">&lt;/script>
+
+      &lt;style type="text/css" media="screen">
+        h1, h2, h3:not(.popover-title) {
+          font-family: 'News Cycle', sans-serif;
+        }
+
+        h3.popover-title {
+          font-weight: bold;
+        }
+
+        h2.system-title {
+          margin: 2.5rem 0 2rem;
+        }
+
+        body {
+          font-family: 'Oxygen', sans-serif;
+          padding-top: 3rem;
+          padding-bottom: 3rem;
+        }
+
+        .popover {
+          font-family: 'Oxygen', sans-serif;
+        }
+
+        .game-description {
+          display: none;
+        }
+      &lt;/style>
+    &lt;/head>
+
+    &lt;body>
+
+      &lt;div class="container">
+        #{output}
+      &lt;/div>
+
+      &lt;script type="text/javascript">
+        $(function () {
+          // When we open a popover, hide any others that may be open.
+          $('a.game-link').click(function (e) {
+            e.preventDefault();
+            var $others = $('[data-toggle="popover"]').not(e.target);
+            $others.popover('hide');
+            $(e.target).popover('toggle');
+          });
+
+          // Make popovers wider.
+          $('a.game-link').on('show.bs.popover', function () {
+            $(this).data("bs.popover").tip().css("max-width", "600px");
+          });
+
+          // Hide a popover whenever someone clicks off.
+          $('body').click(function (e) {
+            var $anchor = $(e.target).closest('a.game-link');
+            var $popover = $(e.target).closest('.popover');
+            if ($anchor.length > 0 || $popover.length > 0) return;
+            $('[data-toggle="popover"]').popover('hide');
+          });
+
+          $('[data-toggle="popover"]').popover({
+            html: true,
+            trigger: 'manual',
+            container: 'body',
+            placement: 'auto bottom',
+            content: function () {
+              var text = $(this).closest('td').find('.game-description').text();
+              text = "&lt;p>" + text + "&lt;/p>";
+              text = text.replace(/\\n\\s*\\n/g, "&lt;/p>\\n&lt;p>");
+              return text;
+            }
+          });
+        });
+      &lt;/script>
+    &lt;/body>
+  &lt;/html>
+  HTML
+
+  puts content
 </code></pre>
 
 <script type="text/javascript">
