--- a/test/ruby.html
+++ b/test/ruby.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
@@ -118,7 +117,7 @@ $result = `do --something | with #{foo}`
 
 <h1 id="problem-script">Problem Script</h1>
 
-<pre><code class="ruby">
+<pre data-only><code class="ruby">
   #!/usr/bin/env ruby
 
   require 'nokogiri'
