Revamp repo to use ESM internally and externally.
We'll still emit a transpiled UMD version, but the ESM version should need no transpilation now that we can import pieces via the "exports" specifiers in package.json.

--- a/test/html.html
+++ b/test/html.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="./theme.css"   type="text/css">
   <link rel="stylesheet" href="./support.css" type="text/css">
 
-  <script src="../dist/daub.umd.js"></script>
+  <script src="../dist/daub.umd.cjs"></script>
   <script src="./support.js"></script>
 
   <title>Daub tests</title>
@@ -54,7 +54,7 @@
   &lt;link rel="stylesheet" href="./theme.css"   type="text/css">
   &lt;link rel="stylesheet" href="./support.css" type="text/css">
 
-  &lt;script src="../dist/daub.umd.js">&lt;/script>
+  &lt;script src="../dist/daub.umd.cjs">&lt;/script>
   &lt;script src="./support.js">&lt;/script>
 
   &lt;!-- this is a comment -->
