--- a/test/esm.html
+++ b/test/esm.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+  <meta name="daub-language" value="all">
 
   <link rel="stylesheet" href="./theme.css"   type="text/css">
   <link rel="stylesheet" href="./support.css" type="text/css">
 
-  <script src="../dist/daub.umd.cjs"></script>
-  <script src="./support.js"></script>
+  <!-- <script src="../dist/daub.umd.cjs"></script>
+  <script src="./support.js"></script> -->
 
 
   <title>Daub tests</title>
@@ -454,7 +454,8 @@ end</code></pre>
   }
 }</code></pre>
 
-<script type="text/javascript">
+<script type="module">
+  import Support from './support.esm.js';
   Support.setup();
 </script>
 
