--- a/test/performance.html
+++ b/test/performance.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./theme.css"   type="text/css">
   <link rel="stylesheet" href="./support.css" type="text/css">
 
-  <script defer src="../dist/daub.umd.js"></script>
+  <script defer src="../dist/daub.umd.cjs"></script>
   <script defer src="./support.js"></script>
 
   <title>Daub tests</title>
